src/App.css
@import url('https://fonts.googleapis.com/css?family=Anton');

.App {
  text-align: center;
}
.App-header {
  background-color: #ec5a6e;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.movie-gallery{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.movie-gallery img{
  height: auto;
  width: 50%;
  border-radius: 10px;
}

.movie-gallery p{
  font-family: 'Anton', sans-serif;
}

.movie-obj{
  max-width: 600px;
  margin-bottom: 5vh;
}

